<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="hint">Select rectangle border to resize</string>
    <string name="app_name">TriChat</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="com.crashlytics.android.build_id">301b4917-3294-4ab7-8b01-e1cfe8a2d848</string>
    <string name="action_myAccount">My account</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_block_user">Block dialog</string>
    <string name="action_unblock_user">Unblock dialog</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="search_params">Search params</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_lang">Language:</string>
    <string name="searchGender">Gender:</string>
    <string name="searchAgeFrom">from</string>
    <string name="searchAgeTo">to</string>
    <string name="useGeoLocation">search near me</string>
    <string name="enterFriendAge">Search age</string>
    <string name="wrong_age">Incorrect age range!</string>
    <string name="next">NEXT   ></string>
    <string name="noGPS">&lt;b> Attention!&lt;/b> Tracking your position is off in your device. This greatly reduces the probability of successful search. Please, &lt;font color=blue> enable tracking by network coordinates.</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_any">Any</string>
    <string name="blockDialogTitle">Block dialog with %1$s?</string>
    <string name="blockDialogMessage">This means that the user is no longer in the search FOREVER</string>
    <string name="newSearch">Start new search</string>
    <string name="addDeleteUser">Save dialog with %1$s for future chatting?</string>
    <string name="addDeleteUsers">Select dialogs you want to save.</string>
    <string name="alertDialogCheckboxClaim">Complain about a user</string>
    <string name="icon_content_description">icon_content_description</string>
    <string name="emptyUsersList">No saved dialogs.</string>
    <string name="loadingUsersList">Loading friends list…</string>
    <string name="setAvatar">Set as dialog icon</string>
    <string name="alertDialogCheckbox">delete media files</string>
    <string name="deleteUserDialog">Delete dialog with %1$s</string>
    <string name="deleteMessageDialog">Delete message?</string>
    <string name="fileNotFound">Media file not found!</string>
    <string name="downloadPrevMessages">Previous messages</string>
    <string name="download">DOWNLOAD</string>
    <string name="oldVersionFoundTitle">App version is old.</string>
    <string name="oldVersionFound">Please download the latest version from the Play Market</string>
    <string name="oldMessagesFound">You have old messages on server. Dowload it?</string>
    <string name="oldMessagesDownloadTitle">Downloading old messages</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="was">was</string>
    <string name="at">at</string>
    <string name="online">online</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="type_image">image</string>
    <string name="type_video">video</string>
    <string name="type_voice">voice record</string>
    <string name="button_gallery">Gallery</string>
    <string name="button_photo">Photo</string>
    <string name="button_video">Video</string>
    <string name="empty_name">Please, enter your name!</string>
    <string name="empty_age">Please, enter your age!</string>
    <string name="noInternet">No internet connection.</string>
    <string name="dialog_blocked_by_me">You blocked dialog</string>
    <string name="dialog_blocked_by_friend">%1$s blocked dialog</string>
    <string name="userDisconnected">User disconnected</string>
    <string name="toBigVideoFile">Video file is too large. Permissible less 20Mb</string>
    <string name="onlineUsers">Online: %1$s</string>
    <string name="noAccountDialogTitle">Registration error!</string>
    <string name="noAccountDialogText">Sorry, but we cannot find registered Google account on your device. Please, register account and try again.</string>
    <string name="noPermissionsDialogTitle">Permission denied!</string>
    <string name="noPermissionsAccountDialogText">Without read account permission you cannot complete registration.</string>
    <string name="noPermissionsCameraDialogText">Please open settings and turn on camera permission.</string>
    <string name="noPermissionsRecordAudioDialogText">Please open settings and turn on record audio permission.</string>
    <string name="noPermissionsStorageDialogText">Without read/write storage permission you cannot receive/send media files.</string>
    <string name="type_message_hint">Type message</string>
    <string name="slideToDelete">&lt;   Slide to delete</string>
    <string name="searching">Searching</string>
    <string name="startSearch">Start search</string>
    <string name="changeParams">Change search params</string>
    <string name="savedDialogs">Saved dialogs</string>
    <string name="ad_offline_id">ca-app-pub-4763544081579863/9800291039</string>
</resources>