<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:compat="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/btn_research" android:id="@id/action_search" android:title="@string/search" compat:showAsAction="always" />
    <item android:id="@id/action_block_dialog" android:visible="true" android:title="@string/action_block_user" compat:showAsAction="never" />
    <item android:id="@id/action_myAccount" android:title="@string/action_myAccount" compat:showAsAction="never" />
    <item android:id="@id/action_search_params" android:title="@string/search_params" compat:showAsAction="never" />
    <item android:id="@id/action_settings" android:orderInCategory="100" android:title="@string/action_settings" compat:showAsAction="never" />
</menu>