<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/gray" android:id="@id/startSearch" android:paddingLeft="30.0dip" android:paddingTop="15.0dip" android:paddingRight="30.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/startSearch" />
    <View android:background="@color/gray_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/gray" android:id="@id/changeParams" android:paddingLeft="30.0dip" android:paddingTop="15.0dip" android:paddingRight="30.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/changeParams" />
    <View android:background="@color/gray_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/gray" android:id="@id/savedDialogs" android:paddingLeft="30.0dip" android:paddingTop="15.0dip" android:paddingRight="30.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/savedDialogs" />
</LinearLayout>