<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ListView android:id="@id/listMessages" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <RelativeLayout android:id="@android:id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="16.0sp" android:textColor="@color/reg_black" android:gravity="center" android:id="@id/newSearchHint" android:background="@drawable/new_search_hint" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="50.0dip" android:text="@string/newSearch" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            <TextView android:textSize="16.0sp" android:id="@id/emptyUsersListHint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/emptyUsersList" android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" ads:adSize="SMART_BANNER" ads:adUnitId="@string/ad_offline_id" />
</RelativeLayout>