<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/top_linear" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_gravity="center" android:id="@id/lay_rel_img" android:background="@drawable/reg_circle" android:layout_width="110.0dip" android:layout_height="110.0dip">
            <ImageView android:id="@id/avatar" android:paddingLeft="13.0dip" android:paddingTop="13.0dip" android:paddingRight="0.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/any_big" android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView android:textSize="20.0sp" android:textColor="@color/white" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/search" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/center_linear" android:paddingLeft="10.0dip" android:paddingTop="0.0dip" android:paddingRight="10.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_below="@id/top_linear">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/black" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_lang" />
            <Spinner android:layout_gravity="center_vertical" android:id="@id/langSpinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/black" android:id="@id/searchAge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/hint_age" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/gray" android:id="@id/searchAgeFrom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/searchAgeFrom" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/black" android:gravity="center" android:id="@id/searchAgeFromValue" android:background="@drawable/circle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/gray" android:id="@id/searchAgeTo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/searchAgeTo" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/black" android:gravity="center" android:id="@id/searchAgeToValue" android:background="@drawable/circle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="left" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/black" android:layout_gravity="left" android:id="@id/searchGender" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/searchGender" />
            <TextView android:textSize="18.0sp" android:textColor="@color/gray" android:gravity="left" android:id="@id/gender_type" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
        <RadioGroup android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/radioGroup" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
            <RadioButton android:id="@id/radioFemale" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:button="@drawable/radio_female" />
            <RadioButton android:id="@id/radioAny" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:button="@drawable/radio_any" />
            <RadioButton android:id="@id/radioMale" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:button="@drawable/radio_male" />
        </RadioGroup>
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/noGPSNotification" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <CheckBox android:id="@id/useGeoLocation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="0.0dip" android:text="@string/useGeoLocation" />
    </LinearLayout>
    <LinearLayout android:id="@id/nextButton" android:background="@color/reg_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:onClick="SaveProfile">
        <TextView android:textSize="20.0sp" android:textColor="@color/reg_white" android:gravity="center_horizontal" android:id="@id/nextButtonText" android:padding="15.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/next" android:onClick="SaveProfile" />
    </LinearLayout>
</RelativeLayout>