<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/Top" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="horizontal" android:id="@id/pickerTop" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:id="@id/picker_from" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/searchAgeFrom" />
            <NumberPicker android:id="@id/numberPicker1" android:descendantFocusability="blocksDescendants" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:id="@id/picker_to" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/searchAgeTo" />
            <NumberPicker android:id="@id/numberPicker2" android:descendantFocusability="blocksDescendants" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <View android:background="@color/frame_background" android:layout_width="wrap_content" android:layout_height="1.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/pickerBottom" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@color/button_text" android:gravity="center_vertical" android:id="@id/buttonYes" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="20.0dip" android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>