<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/top_linear" android:background="@color/reg_woman" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_gravity="center" android:id="@id/lay_rel_img" android:background="@drawable/reg_circle" android:padding="4.0dip" android:layout_width="110.0dip" android:layout_height="110.0dip">
            <ImageView android:id="@id/avatar" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView android:textSize="20.0sp" android:textColor="@color/white" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile" />
    </LinearLayout>
    <ImageView android:id="@id/pickPhoto" android:layout_width="55.0dip" android:layout_height="55.0dip" android:layout_marginTop="-30.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/reg_photo" android:layout_below="@id/top_linear" android:layout_alignParentRight="true" />
    <LinearLayout android:orientation="vertical" android:id="@id/center_linear" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingRight="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_below="@id/top_linear">
        <Spinner android:layout_gravity="center_horizontal" android:id="@id/login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" />
        <EditText android:gravity="center_horizontal" android:id="@id/myName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:hint="@string/hint_name" android:ems="10" android:inputType="textPersonName">
            <requestFocus />
        </EditText>
        <EditText android:gravity="center_horizontal" android:id="@id/myAge" android:focusableInTouchMode="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/hint_age" android:ems="10" android:inputType="number" />
        <TextView android:textSize="18.0sp" android:textColor="@color/gray" android:gravity="center_horizontal" android:id="@id/gender_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
        <RadioGroup android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/radioGroup" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <RadioButton android:id="@id/radioFemale" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:button="@drawable/radio_female" />
            <RadioButton android:id="@id/radioMale" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:button="@drawable/radio_male" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:id="@id/nextButton" android:background="@color/reg_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:onClick="SaveProfile">
        <TextView android:textSize="20.0sp" android:textColor="@color/reg_white" android:gravity="center_horizontal" android:id="@id/nextButtonText" android:padding="15.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/next" android:onClick="SaveProfile" />
    </LinearLayout>
</RelativeLayout>