<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root_view" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:emojicon="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/inputPannel" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_alignParentBottom="true">
        <RelativeLayout android:background="@color/edit_text_background" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_alignParentBottom="true">
            <View android:background="@color/gray_line" android:layout_width="wrap_content" android:layout_height="1.0dip" />
        </RelativeLayout>
        <ImageView android:id="@id/emoji_btn" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:src="@drawable/btn_smile" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/add_btn" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="0.0dip" android:src="@drawable/ic_menu_attachment" android:layout_toRightOf="@id/emoji_btn" android:layout_centerVertical="true" />
        <ImageView android:id="@id/sendBTN" android:paddingLeft="2.0dip" android:paddingTop="3.0dip" android:paddingRight="2.0dip" android:paddingBottom="2.0dip" android:layout_width="55.0dip" android:layout_height="55.0dip" android:src="@drawable/btn_send" android:layout_alignParentRight="true" />
        <com.lioncomdev.trichat.SlideButton android:id="@id/slideButton" android:paddingTop="3.0dip" android:paddingBottom="2.0dip" android:clickable="false" android:layout_width="240.0dip" android:layout_height="55.0dip" android:layout_marginRight="3.0dip" android:max="100" android:progressDrawable="@android:color/transparent" android:thumb="@drawable/speak_now" android:thumbOffset="16.0dip" android:layout_alignParentRight="true" />
        <github.ankushsachdeva.emojicon.EmojiconEditText android:id="@id/emojicon_edit_text" android:background="@null" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="55.0dip" android:hint="@string/type_message_hint" android:layout_toLeftOf="@id/sendBTN" android:layout_toRightOf="@id/add_btn" emojicon:emojiconSize="28.0sp" />
        <LinearLayout android:id="@id/garbage_line" android:visibility="invisible" android:layout_width="240.0dip" android:layout_height="55.0dip" android:layout_marginRight="50.0dip" android:layout_marginBottom="0.0dip" android:layout_alignParentRight="true">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/red" android:layout_gravity="center_vertical" android:id="@id/timerText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="00:00" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/garbage" android:padding="2.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:src="@android:drawable/ic_menu_delete" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/gray" android:layout_gravity="center_vertical" android:id="@id/garbageText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/slideToDelete" />
        </LinearLayout>
    </RelativeLayout>
    <ListView android:id="@id/listMessages" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="0.0dip" android:listSelector="#00000000" android:scrollingCache="false" android:transcriptMode="normal" android:cacheColorHint="#00000000" android:divider="#00000000" android:layout_above="@id/inputPannel" android:layout_alignParentTop="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/searchLine" android:paddingBottom="20.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ProgressBar android:layout_gravity="center_vertical" android:id="@id/searchBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/gray" android:layout_gravity="center_vertical" android:id="@id/searchText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/searching" />
    </LinearLayout>
</RelativeLayout>